# OH_Unmanned_Water_Quality_Monitoring_Boat

./: README-en.md  README.md
中继服务器/OHppChuanService/: build.gradle
中继服务器/OHppChuanService/src/main/java/com/ohppchuan/service/: DeviceController.java  DeviceDataService.java  OHppChuanServiceApplication.java
中继服务器/OHppChuanService/src/main/resources/: application.properties
中继服务器/OHppChuanService/src/test/java/com/ohppchuan/service/: OHppChuanServiceApplicationTests.java
开发板客户端/the4Bhpp/: build-profile.json5  log.txt  oh-package-lock.json5  oh-package.json5
开发板客户端/the4Bhpp/AppScope/: app.json5
开发板客户端/the4Bhpp/AppScope/resources/base/element/: string.json
开发板客户端/the4Bhpp/entry/: build-profile.json5
开发板客户端/the4Bhpp/entry/src/main/cpp/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  i2c_utils.h  napi_init.cpp  serialport.h
开发板客户端/the4Bhpp/entry/src/main/cpp/types/libentry/: Index.d.ts
开发板客户端/the4Bhpp/entry/src/main/ets/pages/: Index.ets
遥控端/TESThpp/: build-profile.json5  oh-package-lock.json5  oh-package.json5
遥控端/TESThpp/AppScope/: app.json5
遥控端/TESThpp/AppScope/resources/base/element/: string.json
遥控端/TESThpp/entry/src/main/: module.json5
遥控端/TESThpp/entry/src/main/ets/Component/: Web.ets
遥控端/TESThpp/entry/src/main/ets/pages/: Index.ets  IoTContent.ets  OHppTabs.ets  SpeedSelecter.ets  YaoKong.ets  testUpper.ets  yaoGan.ets
遥控端/TESThpp/entry/src/main/ets/pages/test/: elec.ets  oxy.ets  ph.ets  temper.ets  zhuodu.ets
遥控端/TESThpp/entry/src/main/resources/base/element/: string.json
(+1 files in other folders)
